[tool.poetry]
name = "isecycle"
version = "1.0.2"
description = "Business Ready Documents from Cisco Identity Services Engine"
authors = ["John Capobianco <ptcapo@gmail.com>"]
packages = [{ include = "isecycle", from = "src"}]
readme = "README.md"

[tool.poetry.scripts]
isecycle = "isecycle.script:run"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.0"
rich-click = "^1.5.1"
rich = "^12.4.4"
Jinja2 = "^3.1.2"
gTTS = "^2.2.4"
xmltodict = "^0.13.0"
PyYAML = "^6.0"
CairoSVG = "^2.5.2"
networkx = "^2.8.4"
pandas = "^1.4.3"
pyvis = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
